[INJIMOB-1078] use builtin functions for performing equality check and map iteration
Signed-off-by: KiruthikaJeyashankar <81218987+KiruthikaJeyashankar@users.noreply.github.com>